[package]
name = "rs-vless"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
tracing.workspace = true

tls.path = "crates/tls"
crypt.path = "crates/crypt"

tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
num-bigint = "0.4.6"

[workspace]
members = [".", "crates/*"]

[workspace.dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
tracing = "0.1.41"
