[package]
name = "tls"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
tracing.workspace = true

strum = { version = "0.27.2", optional = true }
strum_macros = { version = "0.27.2", optional = true }

[features]
default = ["trace"]
trace = ["dep:strum", "dep:strum_macros"]
