[package]
name = "tls"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
tracing.workspace = true

crypt.path = "../crypt"

strum = { version = "0.27.2", optional = true }
strum_macros = { version = "0.27.2", optional = true }
thiserror = "2.0.17"

[features]
default = ["trace"]
trace = ["dep:strum", "dep:strum_macros"]
